# Game

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp
Game/: CMakeLists.txt  main.cpp
Game/config/: Config.cpp  Config.h  Paths.h
Game/filesystem/: Filesystem.cpp  Filesystem.h
Game/graphics/: Shader.cpp  Shader.h  Video.cpp  Video.h
Game/utils/: Log.cpp  Log.h
Minecraft/: CMakeLists.txt  main.cpp
Minecraft/config/: Config.cpp  Paths.h
Minecraft/graphics/: Shader.cpp  Shader.h  TextureAtlas.h  Video.cpp  Video.h  WorldRenderer.cpp  WorldRenderer.h
data/shaders/: main.frag  main.vert
data/shaders/old/: main.vert
